package afb.astyann.versionservice.domain;

public enum ArtifactType {
    DOCUMENT,
    DIAGRAM,
    CODE,
    DEPLOYMENT
}
